--- a/iGear Export Summary/Properties/Settings.settings
+++ b/iGear Export Summary/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="iGear_Export.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="iGear_Export_Summary.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="intHours" Type="System.Int32" Scope="Application">
@@ -14,7 +14,7 @@
       <Value Profile="(Default)">Data Source=ukbirmdb01;Initial Catalog=DockAudit;Persist Security Info=True;User ID=sa;Password=Win@2K12</Value>
     </Setting>
     <Setting Name="streamPath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">H:\iGear\</Value>
+      <Value Profile="(Default)">\\traukbirmfs01\all\iGear\</Value>
     </Setting>
   </Settings>
 </SettingsFile>
