--- a/iGear Export Summary/App.config
+++ b/iGear Export Summary/App.config
@@ -2,17 +2,29 @@
 <configuration>
     <configSections>
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="iGear_Export_Summary.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
             <section name="iGear_Export.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <connectionStrings>
         <add name="iGear_Export.Properties.Settings.sqlConnection" connectionString="Data Source=ukbirmdb01;Initial Catalog=DockAudit;Persist Security Info=True;User ID=sa;Password=Win@2K12"
             providerName="System.Data.SqlClient" />
+        <add name="iGear_Export_Summary.Properties.Settings.sqlConnection"
+            connectionString="Data Source=ukbirmdb01;Initial Catalog=DockAudit;Persist Security Info=True;User ID=sa;Password=Win@2K12"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/>
     </startup>
     <applicationSettings>
+        <iGear_Export_Summary.Properties.Settings>
+            <setting name="intHours" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="streamPath" serializeAs="String">
+                <value>\\traukbirmfs01\all\iGear\</value>
+            </setting>
+        </iGear_Export_Summary.Properties.Settings>
         <iGear_Export.Properties.Settings>
             <setting name="intHours" serializeAs="String">
                 <value>1</value>
