--- a/iGear Export Summary/App.config
+++ b/iGear Export Summary/App.config
@@ -7,14 +7,11 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="iGear_Export.Properties.Settings.sqlConnection" connectionString="Data Source=ukbirmdb01;Initial Catalog=DockAudit;Persist Security Info=True;User ID=sa;Password=Win@2K12"
-            providerName="System.Data.SqlClient" />
-        <add name="iGear_Export_Summary.Properties.Settings.sqlConnection"
-            connectionString="Data Source=ukbirmdb01;Initial Catalog=DockAudit;Persist Security Info=True;User ID=sa;Password=Win@2K12"
-            providerName="System.Data.SqlClient" />
+        <add name="iGear_Export.Properties.Settings.sqlConnection" connectionString="Data Source=ukbirmdb01;Initial Catalog=DockAudit;Persist Security Info=True;User ID=sa;Password=Win@2K12" providerName="System.Data.SqlClient"/>
+        <add name="iGear_Export_Summary.Properties.Settings.sqlConnection" connectionString="Data Source=ukbirmdb01;Initial Catalog=DockAudit;Integrated Security=True" providerName="System.Data.SqlClient"/>
     </connectionStrings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
     <applicationSettings>
         <iGear_Export_Summary.Properties.Settings>
